--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# custom
+.gradle
+.idea
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,gradle,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,gradle,java
