gitignore 수정 (oauth 설정 제외)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # custom
 .gradle
 .idea
+application-oauth.properties
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,gradle,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,gradle,java
