--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile('com.h2database:h2')
     compile('org.springframework.session:spring-session-jdbc')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
 }
